Fix responsive on iPhone

--- a/src/Sot.BlazorDay2025.Website/Pages/HomePage.razor.css
+++ b/src/Sot.BlazorDay2025.Website/Pages/HomePage.razor.css
@@ -10,7 +10,7 @@
   box-shadow: var(--shadow8);
   padding: 24px;
   margin: 12px;
-  height: 370px;
+  min-height: 370px;
 }
 
   .home-card ::deep fluent-button {
